# classic-games-python

./: .gitignore  Makefile  README.md  config.json  requirements-dev.txt
.github/workflows/: classic-games-ci-cd.yml
docs/: DEVELOPMENT.md
scripts/: build-all.sh
snake/: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUICK_REFERENCE.md  README.md  build.sh  config.json  pyproject.toml  release.py  run_snake.py  setup.cfg  setup.py  snake_game.py  snake_game.spec
snake/.github/workflows/: build.yml
snake/docs/: DEVELOPMENT.md  INSTALL.md  QUICK_REFERENCE.md
snake/scripts/: build.sh  check.sh  release.sh  setup-dev.sh  test.sh
snake/snake_game/: __init__.py  config.py  game.py  game_objects.py  high_score.py  input_handler.py  logger.py  main.py  menu.py
snake/snake_game/assets/: .gitkeep  __init__.py
snake/src/: config.py  game.py  game_objects.py  high_score.py
snake/tests/: test_config.py  test_game_objects.py  test_high_score.py  test_input_handler.py
